--- a/maven-artifacts-dependencies.ipynb
+++ b/maven-artifacts-dependencies.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 15.034884214401245 seconds ---\nread 340913 nodes\n"
+      "--- 9.19 seconds ---\nread 340913 nodes\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
     "        artifactId, groupId, version, deps = line.split('\\t')\n",
     "        deps = json.loads(b64decode(deps))\n",
     "        data += [(artifactId, groupId, version, deps)]\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "print(\"--- {0:.2f} seconds ---\".format(time.time() - start_time))\n",
     "print(\"read \" + str(i) + \" nodes\")"
    ]
   },
@@ -77,7 +77,7 @@
     "            n += 1\n",
     "        G.add_edge(\"{}_{}_{}\".format(artifactId, groupId, version),\n",
     "                   \"{}_{}_{}\".format(dep[\"artifactid\"], dep[\"groupid\"], dep[\"version\"]))\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "print(\"--- {0:.2f} seconds ---\".format(time.time() - start_time))\n",
     "\n",
     "print(\"Graph has been created.\")  \n",
     "nx.write_pajek(G, 'data/mvn-deps.net')\n",
@@ -137,7 +137,7 @@
     "largest_cc = max(nx.connected_component_subgraphs(G), key=len)\n",
     "largest_cc_size = largest_cc.size()\n",
     "largest_cc_order = largest_cc.order()\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "print(\"--- {0:.2f} seconds ---\".format(time.time() - start_time))\n",
     "print((\"Largest connected component order (number of nodes): \" + str(largest_cc_order) + \n",
     "      \" ({0:.3f} of whole graph)\").format(largest_cc_order / G_order))\n",
     "print(\"Largest connected component size (number of edges): \" + str(largest_cc_size) + \n",
